--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div><p>SIGN IN</p></div></a>
 	</div>
 	<div id="area-principal">
-		<div id="imagem"><img src="café1.jpg" alt=""></div>
+		<div id="imagem"><img src="cafe.jpg" alt=""></div>
 		<div id="user"><img src="user.png" alt=""><div class="texto"><h1>Amei o <span class="verde">café</span>!</h1><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitat</p></div></div>
 	</div>
 </body>
